--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "log4js": "^6.3.0",
     "pug": "^3.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/helmet": "^0.0.48",
     "@types/node": "^14.11.8",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
