--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
@@ -23,6 +24,7 @@
     "pug": "^3.0.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.0",
     "@types/express": "^4.17.8",
     "@types/helmet": "^0.0.48",
     "@types/node": "^14.11.8",
