--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "express": "^4.17.1",
     "helmet": "^4.1.1",
     "log4js": "^6.3.0",
+    "mongoose": "^5.10.9",
     "pug": "^3.0.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.8",
     "@types/helmet": "^0.0.48",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.8",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
